# CPP-Tasks

./: CMakeLists.txt  README.md  zad1.cpp  zad10.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
