cmake_minimum_required(VERSION 3.26)
project(CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(CPP zad1.cpp
        zad2.cpp
        zad3.cpp
        zad4.cpp
        zad4.cpp
        zad5.cpp
        zad5.cpp
        zad6.cpp
        zad7.cpp
        zad8.cpp
        zad8.cpp
        zad9.cpp
        zad9.cpp
        zad10.cpp
        zad10.cpp
)
